# Erfassinator

./: ARCHITECTURE.md  README.md  USAGE.md  action_processor.py  backend.py  build_pyz.py  login_dialog.py  main.py  main_window.py  pyproject.toml  session_manager.py
erfassinator/: __init__.py  backend.py  data_collector.py  main.py  main_window.py  session_manager.py
