[project]
name = "erfassinator"
version = "0.1.0"
description = "Gesammeltes Erfassen aller Einsatzberichte in FWportal"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "requests>=2.32.5",
    "beautifulsoup4>=4.12.0",
]

[project.scripts]
erfassinator = "erfassinator.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["erfassinator"]
